--- a/PrismCommands/PrismCommands.csproj
+++ b/PrismCommands/PrismCommands.csproj
@@ -8,11 +8,11 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Prism, DelegateCommand, ILWeaving, Fody, Cecil, AOP</PackageTags>
     <PackageOutputPath>$(SolutionDir)../nugets</PackageOutputPath>
-    <PackageProjectUrl>https://github.com/vitkuz573/PrismCommands</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/vitkuz573/PrismCommands.Fody</PackageProjectUrl>
     <LangVersion>latest</LangVersion>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
